feat: setup and testing for ai embedding